Added avro plugins and schema

--- a/java-app/Makefile
+++ b/java-app/Makefile
@@ -3,6 +3,9 @@ INGESTION_JAR_NAME = ingestion/target/ingestion-1.0-SNAPSHOT-jar-with-dependenci
 install:
 	mvn clean install
 
+gen-avro:
+	mvn clean generate-sources compile
+
 build-ingestion:
 	mvn clean package assembly:single -pl ingestion # includes dependencies
 
