Added jib functionality

--- a/java-app/Makefile
+++ b/java-app/Makefile
@@ -11,3 +11,7 @@ build-ingestion:
 
 run-ingestion:
 	java -jar $(INGESTION_JAR_NAME)
+
+publish-ingestion:
+	mkdir -p ~/.java/ingestion/cache
+	mvn compile jib:build -Djib.applicationCache=~/.java/ingestion/cache -pl ingestion
