Completed java-app refactor v1

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 java-app/ingestion/target
 java-app/ingestion/.mvn
 java-app/cache
+java-app/ingestion/*.avro
 
 # Terraform Infrastructure Code
 terraform/.terraform.lock.hcl
