--- a/java-app/ingestion/pom.xml
+++ b/java-app/ingestion/pom.xml
@@ -76,9 +76,9 @@
                     <to>
                         <image>us-central1-docker.pkg.dev/premier-league-analytics/java/ingestion:latest</image>
                     </to>
-                    <!--                    <container>-->
-                    <!--                        <mainClass>com.premierleagueanalytics.ingestion.App</mainClass>-->
-                    <!--                    </container>-->
+                    <container>
+                        <mainClass>com.premierleagueanalytics.ingestion.App</mainClass>
+                    </container>
                 </configuration>
             </plugin>
             <!-- AVRO File generation -->
@@ -120,11 +120,11 @@
                         <descriptorRefs>
                             <descriptorRef>jar-with-dependencies</descriptorRef>
                         </descriptorRefs>
-                        <!--                        <archive>-->
-                        <!--                            <manifest>-->
-                        <!--                                <mainClass>com.premierleagueanalytics.ingestion.App</mainClass>-->
-                        <!--                            </manifest>-->
-                        <!--                        </archive>-->
+                        <archive>
+                            <manifest>
+                                <mainClass>com.premierleagueanalytics.ingestion.App</mainClass>
+                            </manifest>
+                        </archive>
                     </configuration>
                     <executions>
                         <execution>
