Added areas endpoint ingestion

--- a/java-app/Makefile
+++ b/java-app/Makefile
@@ -9,12 +9,15 @@ gen-avro:
 build-ingestion:
 	mvn clean package assembly:single -pl ingestion # includes dependencies
 
-# Run Commands
+# Run Commands TODO: Combine into one command
 run-ingestion-teams:
 	java -cp $(INGESTION_JAR_NAME) com.premierleagueanalytics.ingestion.Teams
 
 run-ingestion-competitions:
 	java -cp $(INGESTION_JAR_NAME) com.premierleagueanalytics.ingestion.Competitions
+
+run-ingestion-areas:
+	java -cp $(INGESTION_JAR_NAME) com.premierleagueanalytics.ingestion.Areas
 
 publish-ingestion:
 	mkdir -p $(HOME)/jib-caches/java-app
